--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 Revision history for Perl extension Module::Build::WithXSpp.
 
+0.02   Sat Jul 10 10:00:00 CEST 2010
+  - Add missing dependency on ExtUtils::CppGuess.
+
 0.01   Fri Jul  9 20:00:00 CEST 2010
   - First release.
