--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Module::Build::WithXSpp.
 
+0.05   Mon Jul 12 20:00:01 CEST 2010
+  - Build dir now searched for headers. XS and XS++ have no
+    business there.
+
 0.04   Mon Jul 12 20:00:00 CEST 2010
   - Requires ExtUtils::CppGuess 0.04
   - Fix extra-{compiler,linker}-flags handling
