--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Module::Build::WithXSpp.
 
+  - Workaround duplicate typemap files on case-insensitive
+    file systems (RT #64240, diagnosed by Shmuel Fomberg)
+
 0.07   Thu Jul 15 20:00:01 CEST 2010
   - Fixed detection of .xspt XS++ typemap files
 
